--- a/arch/arm64/configs/elizium_defconfig
+++ b/arch/arm64/configs/elizium_defconfig
@@ -638,6 +638,8 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
 # CONFIG_CPU_FREQ_GOV_SCHED is not set
 
 #
