--- a/arch/arm64/configs/elizium_defconfig
+++ b/arch/arm64/configs/elizium_defconfig
@@ -5532,6 +5532,7 @@ CONFIG_OID_REGISTRY=y
 CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_WBT=y
 # ELIZIUM
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_WIREGUARD=y
 # CONFIG_WIREGUARD_DEBUG is not set
