--- a/arch/arm64/configs/elizium_defconfig
+++ b/arch/arm64/configs/elizium_defconfig
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="elizium"
+CONFIG_LOCALVERSION="-elizium"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -321,9 +321,9 @@ CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_CFQ_GROUP_IOSCHED is not set
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_CFQ  is not set
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_IOSCHED="zen"
 
 #
 # Partition Types
@@ -709,10 +709,13 @@ CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
 CONFIG_INET_DIAG_DESTROY=y
-# CONFIG_TCP_CONG_ADVANCED is not set
-CONFIG_TCP_CONG_CUBIC=y
+CONFIG_TCP_CONG_ADVANCED=y
 # CONFIG_TCP_CONG_BBR is not set
-CONFIG_DEFAULT_TCP_CONG="cubic"
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_WESTWOOD=y
+# CONFIG_TCP_CONG_BIC is not set
+CONFIG_DEFAULT_WESTWOOD=y
+CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_TCP_AUTOTUNING=y
 CONFIG_IPV6=y
@@ -4910,7 +4913,9 @@ CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
-# CONFIG_NTFS_FS is not set
+CONFIG_NTFS_FS=y
+# CONFIG_NTFS_DEBUG is not set
+CONFIG_NTFS_RW=y
 CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_DISCARD=y
 CONFIG_EXFAT_DELAYED_SYNC=y
@@ -5271,12 +5276,12 @@ CONFIG_DEFAULT_SECURITY_SELINUX=y
 CONFIG_DEFAULT_SECURITY="selinux"
 CONFIG_HISI_RO_LSM_HOOKS=y
 CONFIG_HUAWEI_SELINUX_DSM=y
-CONFIG_HUAWEI_PROC_CHECK_ROOT=y
+# CONFIG_HUAWEI_PROC_CHECK_ROOT is not set
 
 #
 # Huawei root scanner
 #
-CONFIG_HW_ROOT_SCAN=y
+# CONFIG_HW_ROOT_SCAN is not set
 # CONFIG_HW_ROOT_SCAN_ENG_DEBUG is not set
 
 #
